--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="left-links">
-            <div class="logo">
-                Header Logo
+    <div class="header"> <!-- Treba napraviti header u headeru, logo i linkovi budu PRAVI header elementi -->
+        <div class="upper-header">
+            <div class="left-links">
+                <div class="logo">
+                    Header Logo
+                </div>
             </div>
+            <ul class="right-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
-        <ul class="right-links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
         <div class="header-content">
             <div class="left-content">
                 <h1>This website is awesome</h1>
