Upper content and header are complited, only photos are missing. going to add them soon

--- a/index.html
+++ b/index.html
@@ -41,21 +41,43 @@
 
 
     <div class="container">
+        <h2>Some randome information.</h2>
         <div class="upper-content">
 
-        </div>
 
-        <div class="middle-content">
+            <div class="one">
+                <img src="" alt="one">
+                <div class="text">This is some subtext uner an illustration or image</div>
+            </div>
 
-        </div>
+            <div class="two">
+                <img src="" alt="two">
+                <div class="text">This is some subtext uner an illustration or image</div>
+            </div>
 
-        <div class="lower-content">
+            <div class="three">
+                <img src="" alt="three">
+                <div class="text">This is some subtext uner an illustration or image</div>
+            </div>
 
+            <div class="four">
+                <img src="" alt="four">
+                <div class="text">This is some subtext uner an illustration or image</div>
+            </div>
         </div>
     </div>
 
+    <div class="middle-content">
 
-    <div class="footer"></div>
+    </div>
+
+    <div class="lower-content">
+
+    </div>
+    </div>
+
+
+    <div class="footer"> Copyright &#169; The Odin Project 2021</div>
 </body>
 
 </html>
