--- a/index.html
+++ b/index.html
@@ -68,8 +68,16 @@
     </div>
 
     <div class="middle-content">
-
+        <div class="mtext">This is an inspiring quote, or testimonial from a customer. Maybe it's kist filling up
+            spaces,
+            or maybe people will actually read.
+            Who knows? All I know is that it looks nice.
+        </div>
+        <div class="author-con">
+            <div class="author">-Thor, God of Thunder</div>
+        </div>
     </div>
+
 
     <div class="lower-content">
 
