--- a/index.html
+++ b/index.html
@@ -80,8 +80,17 @@
 
 
     <div class="lower-content">
+        <div class="modal">
+            <div class="left">
+                <h2>Call to action! It's time!</h2>
+                <div class="ltext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="right"><button>Sign up</button></div>
 
+
+        </div>
     </div>
+
     </div>
 
 
