Slike su dodane

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="right-content">
-            <img src="" alt="Place holder for image">
+            <img src="photos/5.jpg" alt="Place holder for image">
         </div>
     </div>
 
@@ -46,22 +46,22 @@
 
 
             <div class="one">
-                <img src="" alt="one">
+                <img src="photos/1.jpg" alt="one">
                 <div class="text">This is some subtext uner an illustration or image</div>
             </div>
 
             <div class="two">
-                <img src="" alt="two">
+                <img src="photos/2.jpg" alt="two">
                 <div class="text">This is some subtext uner an illustration or image</div>
             </div>
 
             <div class="three">
-                <img src="" alt="three">
+                <img src="photos/3.jpg" alt="three">
                 <div class="text">This is some subtext uner an illustration or image</div>
             </div>
 
             <div class="four">
-                <img src="" alt="four">
+                <img src="photos/4.jpg  " alt="four">
                 <div class="text">This is some subtext uner an illustration or image</div>
             </div>
         </div>
